--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
                 <ul>
                     <li id="logoli"><a href="#"  id="logo">Restaurent</a></li>
                     <li class="itemli"><a href="#"  class="itemlia">Home</a></li>
-                    <li class="itemli"><a href="secondPage.html" class="itemlia">Second Page</a></li>
-                    <li class="itemli"><a href="thirdPage.html" class="itemlia">Third Page</a></li>
+                    <li class="itemli"><a href="statistics.html" class="itemlia">statistics</a></li>
                 </ul>
         </nav>
 
@@ -29,7 +28,7 @@
            <form action="submit" id="formid">
 
             <label for="foodName" class="labelform">Food Name</label>
-            <input type="text" id="idfoodName" class="inputform" placeholder="Enter Food Name" required><br>
+            <input type="text" id="idfoodName" class="inputform" placeholder="Enter Food Name"  required><br>
 
             
             <label for="typeOfFood"  class="labelform">Type</label>
@@ -44,7 +43,7 @@
             </select> <br>
 
             <label for="price" class="labelform">Price</label>
-            <input type="text" id="price" class="inputform" placeholder="Enter Price" required>
+            <input type="number"  step="0.01" id="price" class="inputform" placeholder="Enter Price" required>
 
 
 
@@ -52,11 +51,6 @@
            </form>
         </div>
 
-        <div id="tablediv">
-
-            <h1 id="noData">No Data to show</h1>
-
-        </div>
 
 
 
@@ -87,5 +81,7 @@
 
     <script src="app.js"></script>
 </body>
+
+
 </html>
 
