--- a/statistics.html
+++ b/statistics.html
@@ -43,7 +43,7 @@
         <div class="footer-right">
 
             <a href="https://web.facebook.com/7asnMousa/"><i class="fa fa-facebook"></i></a>
-            <a href="https://www.linkedin.com/in/hasan-mousa-3baaa4177/"><i class="fa fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/hasan-mousa-3baaa4177?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BYKdF2slsSYqXNi3iXcH1YA%3D%3D"><i class="fa fa-linkedin"></i></a>
             <a href="https://github.com/Hassanabdelqader"><i class="fa fa-github"></i></a>
 
         </div>
