--- a/statistics.html
+++ b/statistics.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/statistics.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-
+   
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>   
     <title>Static</title>
 </head>
 
@@ -34,8 +34,15 @@
 
         </div>
 
+        <div class="divchart">
 
+        <canvas id="myChart" width="750" height="750"></canvas>
 
+        </div>
+
+    <div class="divchart">
+        <canvas id="myChart2" width="1000" height="600"></canvas>
+    </div>
     </main>
 
     <footer class="footer">
@@ -62,6 +69,9 @@
     
 
     <script src="statistics.js"></script>
+
+
+
 </body>
 
 
