--- a/statistics.html
+++ b/statistics.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/statistics.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-   
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>   
     <title>Static</title>
 </head>
@@ -34,13 +34,13 @@
 
         </div>
 
-        <div class="divchart">
+    <div class="divchart">
 
-        <canvas id="myChart" width="750" height="750"></canvas>
+        <canvas id="myChart" height="600" width="600"></canvas>
 
         </div>
 
-    <div class="divchart">
+    <div class="divchart2">
         <canvas id="myChart2" width="1000" height="600"></canvas>
     </div>
     </main>
